--- a/game_styles.css
+++ b/game_styles.css
@@ -11,6 +11,7 @@ body {
   /* margin: 10 auto; */
   /* max-width: 56em; */
   /* padding: 1em 0; */
+  min-width: 500px;
 
 }
 
@@ -240,7 +241,7 @@ p {
 h3 {
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 350px;
+  max-width: 300px;
 
 }
 
@@ -266,4 +267,183 @@ h3 {
 .head-bg {
   background-color: black;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+
+
+@media only screen and (max-width: 1500px) {
+
+  .game-title {
+
+    color: white;
+    margin: 10px;
+    font-weight: 400;
+    font-size: 23px;
+    font-family: 'Droid Serif', serif;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.9);
+  }
+  .release,  .esrg{
+    font-weight: 400;
+    font-size: 15px;
+
+  }
+
+
+}
+
+
+@media only screen and (max-width: 1250px) {
+  body {
+    background-color: lightblue;
+  }
+
+  .game-title {
+
+    color: white;
+    margin: 10px;
+    font-weight: 400;
+    font-size: 18px;
+    font-family: 'Droid Serif', serif;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.9);
+  }
+  .release,  .esrg{
+    font-weight: 400;
+    font-size: 12px;
+
+  }
+
+  h3 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 205px;
+  
+  }
+
+
+}
+@media only screen and (max-width: 790px) {
+
+
+  .game-title {
+
+    color: white;
+    margin: 10px;
+    font-weight: 400;
+    font-size: 25px;
+    font-family: 'Droid Serif', serif;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.9);
+  }
+  .release,  .esrg{
+    font-weight: 400;
+    font-size: 16px;
+
+  }
+
+  h3 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 350px;
+  
+  }
+
+
+  .logo-container {
+
+    margin: 30px 0px 0px 5px;
+    /* background: lightpink; */
+    display: flex;
+    height: 7vh;
+  }
+  
+  .logo-img {
+    /* background: lightgreen; */
+    margin: 0px;
+    height: 100%;
+    /* filter: white; */
+    /* color: white; */
+  }
+  
+  .logo-container h4 {
+    /* background: lightblue; */
+    margin: 60px 0px 0px 5px;
+    color: white;
+  
+  }
+  
+  .main-text {
+    /* background: lightblue; */
+    margin: 0px 0px 5px 15px;
+    color: white;
+    text-shadow: 2px 2px rgba(8, 8, 8, 0.2);
+  
+  }
+  
+  .main-text h1 {
+    /* background: red; */
+    margin: 0px;
+    font-weight: 600;
+    font-size: 30px;
+  }
+  
+  .main-text p {
+    /* background: green; */
+    /* margin: 0px 0px 10px 0px; */
+    font-size: 13px;
+  }
+  
+  nav {
+  
+    display: flex;
+    margin: 12px 0px 5px 5px;
+  
+  }
+  
+  .nav-links {
+    background: green;
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    flex: 1;
+    /* text-shadow: 2px 2px rgba(8, 8, 8, 0.2); */
+  }
+  
+  .nav-link {
+    color: white;
+    font-size: 18px;
+    text-decoration: none;
+  
+  
+  }
+  
+
+
+  .about {
+    /* background: lightpink; */
+    flex: 2;
+    justify-content: flex-end;
+  
+    text-align: end;
+    margin: 33px 10px 0px 10px;
+    display: block;
+  }
+  
+  #about {
+    background-color: rgba(255, 255, 255, 0.2);
+    flex: 2;
+    justify-content: flex-end;
+    text-align: center;
+  
+    border: none;
+    height: 40px;
+    padding: 5px;
+    color: white;
+    font-size: 16px;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-right: 10px;
+    cursor: pointer;
+    border-radius: 3px 3px 3px 3px;
+  
+  }
+
+
 }
