--- a/game_styles.css
+++ b/game_styles.css
@@ -332,20 +332,20 @@ h3 {
     color: white;
     margin: 10px;
     font-weight: 400;
-    font-size: 25px;
+    font-size: 20px;
     font-family: 'Droid Serif', serif;
     text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.9);
   }
   .release,  .esrg{
     font-weight: 400;
-    font-size: 16px;
+    font-size: 13px;
 
   }
 
   h3 {
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 350px;
+    max-width: 230px;
   
   }
 
@@ -448,6 +448,9 @@ h3 {
     border-radius: 3px 3px 3px 3px;
   
   }
+.score{
+ font-size: 18px;
 
+}
 
 }
