--- a/game_styles.css
+++ b/game_styles.css
@@ -271,9 +271,9 @@ h3 {
 
 
 @media only screen and (max-width: 1500px) {
-  body {
+  /* body {
     background-color:yellow;
-  }
+  } */
   .game-title {
 
     color: white;
@@ -294,9 +294,9 @@ h3 {
 
 
 @media only screen and (max-width: 1250px) {
-  body {
+  /* body {
     background-color: lightblue;
-  }
+  } */
 
   .game-title {
 
@@ -323,9 +323,9 @@ h3 {
 
 }
 @media only screen and (max-width: 790px) {
-  body {
+  /* body {
     background-color: pink;
-  }
+  } */
 
   .game-title {
 
@@ -425,7 +425,7 @@ h3 {
     flex: 2;
     justify-content: flex-end;
   
-    text-align: end;
+    text-align: center;
     margin: 33px 10px 0px 10px;
     display: block;
   }
